# pyscaf-core

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  _todo.md  compose.yaml  mkdocs.yml  pyproject.toml
.cursor/: mcp.json
apps/demo-scaf/: README.md  pyproject.toml
apps/demo-scaf/src/demo_scaf/: main.py  testing.py
apps/demo-scaf/src/demo_scaf/action_test_yamls/hello/: test_default.yaml  test_hi_greeting.yaml
apps/demo-scaf/src/demo_scaf/action_test_yamls/readme/: test_default.yaml  test_no_license.yaml
apps/demo-scaf/src/demo_scaf/actions/: __init__.py  hello.py  readme.py
apps/demo-scaf/tests/: test_demo.py  test_yaml_actions.py
apps/pyscaf/: pyproject.toml
apps/pyscaf/src/pyscaf_app/: main.py  testing.py
apps/pyscaf/src/pyscaf_app/actions/: __init__.py
apps/pyscaf/src/pyscaf_app/actions/core/: README.md  __init__.py
apps/pyscaf/src/pyscaf_app/actions/documentation/: README.md  __init__.py  config.toml
apps/pyscaf/src/pyscaf_app/actions/git/: __init__.py
apps/pyscaf/src/pyscaf_app/actions/jupyter/: __init__.py  config.toml
apps/pyscaf/src/pyscaf_app/actions/jupyter_tools/: __init__.py  config.toml
apps/pyscaf/src/pyscaf_app/actions/license/: __init__.py
apps/pyscaf/src/pyscaf_app/actions/semantic_release/: __init__.py  config.toml
apps/pyscaf/src/pyscaf_app/actions/test/: README.md  __init__.py  config.toml
apps/pyscaf/tests/: test_pyscaf_smoke.py
apps/septeo-scaf/: pyproject.toml
apps/septeo-scaf/src/septeo_scaf/: main.py  testing.py
apps/septeo-scaf/src/septeo_scaf/actions/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/agents/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/core/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/database/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/docker/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/docs_starlight/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/env_config/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/git/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/i18n/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/ide_binding/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/javascript/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/localstack/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/mcp/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/php/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/pipeline/: __init__.py
apps/septeo-scaf/src/septeo_scaf/actions/python/: __init__.py
apps/septeo-scaf/tests/: test_septeo_smoke.py
(+139 files in other folders)
