[project]
name = "pyscaf-core-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Minimal layout so hatchling can build an editable root; not a published product.
packages = ["src/pyscaf_core_workspace"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["packages/pyscaf-core/tests", "apps/demo-scaf/tests"]
