[project]
name = "demo-scaf"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pyscaf-core"]

[project.scripts]
demo-scaf = "demo_scaf.main:main"

[project.entry-points."pyscaf_core.plugins"]
hello = "demo_scaf.actions.hello:HelloAction"
readme = "demo_scaf.actions.readme:ReadmeAction"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_scaf"]

[tool.uv.sources]
pyscaf-core = { workspace = true }
