[project]
name = "pyscaf-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyscaf-core",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
pyscaf-app = "pyscaf_app.main:main"

[project.entry-points."pyscaf_core.plugins"]
pyscaf_app = "pyscaf_app.actions:discover_actions"

[project.entry-points."pyscaf_core.test_yamls"]
pyscaf_app = "pyscaf_app.testing:get_test_config"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscaf_app"]

[tool.uv.sources]
pyscaf-core = { workspace = true }
