[project]
name = "septeo-scaf"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyscaf-core",
    "jinja2>=3.0.0",
    "tomlkit>=0.13.0",
]

[project.scripts]
septeo-scaf = "septeo_scaf.main:main"

[project.entry-points."pyscaf_core.plugins"]
septeo_scaf = "septeo_scaf.actions:discover_actions"

[project.entry-points."pyscaf_core.test_yamls"]
septeo_scaf = "septeo_scaf.testing:get_test_config"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/septeo_scaf"]

[tool.uv.sources]
pyscaf-core = { workspace = true }
